# goldenhash

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  original_request.txt
cmake/: crocs-config.cmake.in
docs/: Makefile  analysis_summary.txt  crocs_crypto_applications.md  crocs_test_results.csv  crocs_whitepaper.aux  crocs_whitepaper.tex  cryptographic_applications.md  golden_prime_hash.md  golden_prime_hash.tex  goldenhash_report.txt  goldenhash_stats.json  goldenhash_tables.tex  initial_test_results.md  modular_rotation_theory.md  representative_results.csv  summary_stats.json  things_to_investigate.md
experimental/: test_float_hash.cpp
include/: float_hash.hpp  goldenhash.hpp  goldenhash128.hpp  goldenhash_cipher.hpp  goldenhash_ollama.hpp  goldenhash_sentiment.hpp  hash_metrics.hpp  inmemory_hash.hpp
include/goldenhash/tests/: collision_store.hpp  common.hpp  hash64_analyzer.hpp  hash_algorithms.hpp  map_shard.hpp  memory_utils.hpp  metrics.hpp  sqlite_shard.hpp  sqlite_test_data.hpp  test_data.hpp  test_runner.hpp
old_files/: README.md  analyze_algo  analyze_duplicates.py  analyze_modular_results.py  analyze_primes  analyze_xxhash_primes.cpp  collect_modular_data.py  config_comprehensive_medium.json  config_comprehensive_small.json  config_extreme_scale.json  config_golden_ratio_focus.json  config_large_scale.json  config_mathematical.json  config_powers_of_2.json  config_prime_density.json  config_quick_smoke.json  config_stress_composite.json  crocs_data.db  crocs_multi_table.cpp  crocs_test  crocs_test.cpp  crocs_test_results.csv  crypto_analysis.cpp  data_collector.py  generate_comprehensive_tests.py  generate_plots.py  golden_hash_json  golden_hash_json.cpp  modular_hash_data.db  modulo_rotate  modulo_rotate copy 2.cpp  modulo_rotate.cpp  run_all_tests.sh  run_config_tests.py  run_extreme_tests.py  run_massive_test.py  run_overnight_test.sh  run_systematic_tests.py  run_tests.py  test_configurations.json  (+4 more)
python/: analyze_crocs.py  analyze_modular_results.py  analyze_simple.py  collect_modular_data.py  generate_whitepaper_results.py
src/: cipher_test.cpp  goldenhash.cpp  goldenhash_cipher.cpp  goldenhash_ollama.cpp  goldenhash_sentiment.cpp  hash64_demo.cpp  main.cpp  ollama_demo.cpp  ollama_demo_small.cpp  sbox_test.cpp  sentiment_demo.cpp  singlethread_test.cpp  sqlite_debug.cpp  zkp_test.cpp
src/goldenhash/: goldenhash.cpp
tests/: test_comprehensive.cpp  test_crocs_batch.cpp  test_crocs_comprehensive.cpp  test_float_hash_metrics.cpp  test_large_scale.cpp  test_single_size.cpp
